--- a/example.html
+++ b/example.html
@@ -3,7 +3,13 @@
     <head>
 
     </head>
-    <body>
-        <h1>Header</h1>
+    <body style="margin: auto 0;">
+        <h1>Example login form</h1>
+        <p>email</p>
+        <input type="text" name="email" />
+        <p>password</p>
+        <input type="password" name="password" />
+        <br></br>
+        <button type="submit">Login</button>
     </body>
 </html>
